--- a/総合カスタム処理機能説明書.md
+++ b/総合カスタム処理機能説明書.md
@@ -105,7 +105,7 @@ const INSPECTION_DATA_HEADERS = [
 3. 既存部屋IDの重複チェック
 4. 部屋マスタから新規部屋データの初期登録
 
-**メニュー位置**: `1. 初期検針データ作成 (部屋マスタから)`
+**メニュー位置**: `1. 初期検針データ作成`
 
 ---
 
@@ -193,7 +193,7 @@ const columnsToCopy = [
 **メニュー構成**:
 ```
 総合カスタム処理
-├── 1. 初期検針データ作成 (部屋マスタから)
+├── 1. 初期検針データ作成
 ├── 2. マスタから検針データへ新規部屋反映
 ├── ───────────────────
 ├── 3. 物件マスタの物件IDフォーマット
@@ -208,7 +208,7 @@ const columnsToCopy = [
 
 ## 🎮 各メニューの詳細動作機能
 
-### 📋 **メニュー1: 初期検針データ作成 (部屋マスタから)**
+### 📋 **メニュー1: 初期検針データ作成**
 **何をするメニューか**: 検針作業で使う基本データを自動で作成してくれる
 
 #### 🏠 **このメニューが行うこと**
